# SmtpClient-for-Qt

./: CMakeLists.txt
src/: emailaddress.cpp  emailaddress.h  mimehtml.h  mimetext.h  smtpclient.cpp  smtpclient.h  smtpexports.h
